# template.python.project

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  debian-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  run_container.sh  run_python.sh  setup.py  test_environment.py  yelow_tripdata.csv
.devcontainer/: devcontainer.json
conf/: log.conf  settings.yml
docs/: conf.py
jupyter/: Dockerfile
notebooks/: bokeh-dashboard.ipynb  categorical_pareto_distribution.ipynb  gist.ipynb
src/: base.py  base_pipeline.py  make_logger.py
src/conf/: settings.yml
src/data/: base_pipeline.py  filter_data.py  make_dataset.py  make_pipeline.py  summary_stats.sql  utils.py
src/features/: build_features.py
src/models/: train_model.py
src/visualization/: visualize.py
tests/: mock_dataset.py  test_base_pipeline.py  test_filter_pipeline.py  test_logger.py
