[tool.poetry]
name = "docker.datascience"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
arviz = "^0.11.2"
awscli = "^1.19.109"
catboost = "^0.26"
category-encoders = "^2.2.2"
click = "^8.0.1"
dask = {extras = ["complete"], version = "^2021.7.0"}
hyperopt = "^0.2.5"
lightgbm = "^3.2.1"
numpy = "^1.21.0"
pandas = "^1.3.0"
pymc3 = "^3.11.2"
python-dotenv = "^0.18.0"
PyYAML = "^5.4.1"
scikit-learn = "^0.24.2"
scikit-plot = "^0.3.7"
scipy = "^1.7.0"
seaborn = "^0.11.1"
shap = "^0.39.0"
statsmodels = "^0.12.2"
typeguard = "^2.12.1"
xgboost = "^1.4.2"
bokeh = "^2.3.3"

[tool.poetry.dev-dependencies]
icecream = "^2.1.1"
jupyterlab = "^3.0.16"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
